changed users to items and added auth to post, put and delete reqs
